# leap

./: .prettierignore  .prettierrc  LICENSE  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: apps.rs  image_compress.rs  lib.rs  main.rs  pdf_generator.rs
src/components/: AnimatedOutlet.tsx  JsonTreeNode.tsx
src/components/features/Calculator/: index.tsx
src/components/features/CommandPalette/: index.tsx
src/components/features/ImageCompressor/: index.tsx
src/components/features/JsonFormatter/: index.tsx
src/components/features/PdfMerger/: index.tsx
src/components/layouts/: ToolLayout.tsx
src/components/ui/: avatar.tsx  command.tsx  dialog.tsx  input.tsx  scroll-area.tsx  separator.tsx
src/hooks/: useWindowResize.ts
src/pages/: CalculatorPage.tsx  CommandPage.tsx  ImageCompressorPage.tsx  JsonFormatterPage.tsx  PdfMergerPage.tsx
src/styles/: globals.css
