[package]
authors = [ "you" ]
description = "A Tauri App"
edition = "2021"
name = "leap"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = [ "cdylib", "rlib", "staticlib" ]
name = "leap_lib"

[build-dependencies]
tauri-build = { version = "2", features = [  ] }

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tauri = { version = "2.2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tokio = "1.40"
dirs = "5.0"
base64 = "0.22"
sha2 = "0.10"
image = "0.25"
mozjpeg = "0.10"
imagequant = "4.3"
png = "0.17"
zip = "2.1"
num_cpus = "1.16"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["winuser", "shellapi", "wingdi", "windef", "winbase"] }
